updated imagePreview func, test and docs
